Barra Navegação Superior

--- a/INDEX.html
+++ b/INDEX.html
@@ -17,7 +17,19 @@
 </head>
 <body>
 
-    
+    <div class="barra-navegacao">
+        
+        <div class="logo-superior"> <img src="./ASSETS/A+ Studio.png"> </div>
+
+        <div class="menu-navegacao">
+            <a class="home"> Home </a>
+            <a class="what"> What We Do </a>
+            <a class="service"> Service </a>
+            <a class="project"> Project </a>
+            <a class="blog"> Blog </a>
+            <a class="contact"> Contact </a>
+
+    </div>
 
 </body>
 </html>
