Criação Página de Rosto

--- a/INDEX.html
+++ b/INDEX.html
@@ -28,6 +28,25 @@
             <a class="project"> Project </a>
             <a class="blog"> Blog </a>
             <a class="contact"> Contact </a>
+        </div>
+
+    </div>
+
+    <div class="principal">
+
+        <div class="m-esquerdo">
+
+            <div class="main-text"> A Digital Product Agency </div>
+            <div class="inf-text"> Leading digital agency with solid design and development expertise. We build readymade websites, mobile applications, and elaborate online business services. </div>
+            <button class="main-button"> Contact Now </button>
+            
+        </div>
+
+        <div class="m-direito">
+
+            <div> <img class="main-img" src="./ASSETS/main-img.png" alt="main image"> </div>
+
+        </div>
 
     </div>
 
